--- a/MS/1.html
+++ b/MS/1.html
@@ -84,7 +84,7 @@ alt="ImageItem" style="width: 100%;">
 
     <form class="items__form">
     <input class="items__input" type="email" placeholder="Email">
-    <button class="items__button">Submit</button>
+    <button class="items__button">Order</button>
     </form>
 </div>
 </div>
