--- a/MS/2.html
+++ b/MS/2.html
@@ -71,6 +71,7 @@ gap: 35px;">
 <img src="../img/MS/2.avif" 
 alt="ImageItem" style="width: 100%;">
 </div>
+<noindex>
 <div class="items__info">
     <h2 style="font-size: calc(20px + 6 * ((100vw - 320px)/ 960));
     margin-bottom: 20px;
@@ -79,13 +80,14 @@ alt="ImageItem" style="width: 100%;">
     <p style="font-size: calc(18px + 2 * ((100vw - 320px)/ 960));
     margin-bottom: 20px;
     font-weight: 400;color: #000">3 Seater Sofa, Silver REPREVE® Recycled Polyester</p>
+    </noindex>
     <p style="font-size: calc(18px + 2 * ((100vw - 320px)/ 960));
     margin-bottom: 20px;
     font-weight: 600;color: #000">€4,000</p>
 
     <form class="items__form">
     <input class="items__input" type="email" placeholder="Email">
-    <button class="items__button">Submit</button>
+    <button class="items__button">Order</button>
     </form>
 </div>
 </div>
