--- a/MS/3.html
+++ b/MS/3.html
@@ -68,22 +68,23 @@ flex-wrap: wrap;
 gap: 35px;">
 
 <div style="width: 500px;">
-<img src="../img/MS/2.avif" 
+<img src="../img/MS/3.avif" 
 alt="ImageItem" style="width: 100%;">
 </div>
-<noindex>
+
 <div class="items__info">
+    <noindex>
     <h2 style="font-size: calc(20px + 6 * ((100vw - 320px)/ 960));
     margin-bottom: 20px;
     font-weight: 400;
     line-height: 120%; color: #000;">Jacklin</h2>
     <p style="font-size: calc(18px + 2 * ((100vw - 320px)/ 960));
     margin-bottom: 20px;
-    font-weight: 400;color: #000">3 Seater Sofa, Silver REPREVE® Recycled Polyester</p>
+    font-weight: 400;color: #000">2 Seater Sofa, Atlantic Chenille</p>
     </noindex>
     <p style="font-size: calc(18px + 2 * ((100vw - 320px)/ 960));
     margin-bottom: 20px;
-    font-weight: 600;color: #000">€4,000</p>
+    font-weight: 600;color: #000">€3,500</p>
 
     <form class="items__form">
     <input class="items__input" type="email" placeholder="Email">
